--- a/docs/usp570/pm_usp570.Rmd
+++ b/docs/usp570/pm_usp570.Rmd
@@ -22,179 +22,115 @@ From: Shen Qu, Policy Advisor
 
 Date: 5/2/2019 
 
-RE: Define and measure accessibility in Plan Bay are 2050
+RE: Define and measure accessibility in Plan Bay Area 2050
 
 # Summary
 
 Accessibility, the ease of reaching destinations, is a key land use and transportation performance measure[@boisjoly2017insider].
-Including clear accessibility objectives, definitions, and indicators in Plan Bay Area 2050 is key to promoting the use of metrics in policy and practice.
-
-multi-criteria analysis approaches including accessibility indicators need to guide the decision-making process and ultimately. 
-To meet The Bay Area's transportation needs through 2050 while preserving the character of its diverse communities and adapting to future population growth.
-To make progress toward the Bay Area long-range transportation and land use goals.
-
-[@boisjoly2017get]
-
-equity analysis  greater accessibility reducing the risks of social exclusion for vulnerable individuals *(Preston and Rajé, 2007, Lucas, 2012)*
-
-Accessibility goals and objectives
-
-accessibility indicators
-
-Access to destinations metrics
-
-Multiple modes
-
-Visualization tools	
+The decision-making process should include clear accessibility objectives, definitions, and indicators in Plan Bay Area 2050. Some approaches and tools	can promote achiving greater accessibility. The equity analysis of accessibility can help reducing the risks of social exclusion for vulnerable individuals *(Preston and Rajé, 2007, Lucas, 2012)*. 
+Ultimately, the use of metrics in policy and practice is key to make progress toward the Bay Area long-range transportation and land use goals while preserving the character of its diverse communities and adapting to future population growth.
 
 # Background
 
- - Plan Bay Area 2050: they are going to update their regional transportation plan, along with their processes for selecting projects for funding, at all scales.
-
 Plan Bay Area 2050 is an integrated long-range transportation and land use plan developed and adopt by MTC and ABAG. Work on Plan Bay Area 2050 is expected to begin in August 2019 and focused update that builds upon the growth pattern and strategies developed in the original Plan Bay Area 2040 (adopted in July 2017) but with updated planning assumptions that incorporate key economic, demographic and financial trends from the last four years.
 
-Re-examining the prior Plan’s goals and targets is one of the first steps in updating Plan Bay Area in order to make them as meaningful as possible in measuring the Plan’s performance. In the current 13 performance targets, three goals are about 'Equitable Access'. It is also a response to the most recent federal transportation bills – the Fixing America’s Surface Transportation Act (FAST Act) that require Plan Bay Area to address ‘accessibility and mobility of people and freight’ (U.S. Department of Transportation, 2014). 
+Re-examining the prior Plan’s goals and targets is one of the first steps in updating Plan Bay Area in order to make them as meaningful as possible in measuring the Plan’s performance. In the current 13 performance targets [^1], three goals are about 'Equitable Access'[^2]. It is also a response to the most recent federal transportation bills – the Fixing America’s Surface Transportation Act (FAST Act) that require Plan Bay Area to address ‘accessibility and mobility of people and freight’ (U.S. Department of Transportation, 2014). 
 
-Although the three targets are components of accessibility, it does not fully reflect access to destinations. In spite of access afordable housing, a broader range of destinations is generally included
+However, the federal guidelines and prior plan doesn't define access explicitly. The terms accessibility and mobility are used as a vague term that does not reflect the ease of reaching various destinations and often are conflated, “misused”, and “abused” in practice (Halden, 2011). Access to destinations does not translate into indicators that reflect accessibility in previous plans. Although the three targets are components of accessibility, they do not fully reflect access to destinations. In spite of access afordable housing, a broader range of destinations should be included.
 
-accessibility is one of the most comprehensive performance measures of land use and transportation systems *(El-Geneidy and Levinson, 2006)*. 
+The concept of accessibility has been a common element in the goals and objectives of transport plans @hansen1959accessibility. It is one of the most comprehensive performance measures of land use and transportation systems [@boisjoly2017get], which provides residents with greater access to a variety of opportunities, is associated with higher employment rates, greater transit use, and less greenhouse gas emissions *(Chen et al., 2008, Owen and Levinson, 2015b)*. It is not only to support and foster economic development through improved employment accessibility for deprived areas, but also to improve social inclusion and reduce social inequities. 
 
-is associated with higher employment rates,  provides residents with greater access to a variety of opportunities*(Ornati et al., 1969, Pignatar and Falcocch, 1969, Sanchez, 1999, Blumenberg and Ong, 2001, Sari, 2015, Tyndall, 2015)*,  reducing car use greater transit use *(Chen et al., 2008, Owen and Levinson, 2015b)*,and the resulting greenhouse gas emissions *(Levinson, 1998, Handy, 2002)*. 
+Explicitly defining and measuring accessibility as the end goal of the transportation network would encourage the establishment of accessibility-based performance indicators to assess the overall benefits of potential investments, and help decision-making for MTC, ABAG, and local governments.
 
-accessibility allows increaseing the chances of meeting the other performance targets in Plan Bay Area, including Climate Protection, Healthy and Safe Communities, Open Space and Agricultural Preservation, Economic Vitality, Transportation System Effectiveness, and should hence also be used to assess the overall benefits of potential investments.
+[^1]: The 13 performance targets are included in six categories: Climate Protection, Healthy and Safe Communities, Open Space and Agricultural Preservation, Equitable Access, Economic Vitality, and Transportation System Effectiveness.
+[^2]: The three goals include: Decrease the share of lower-income residents’ household income consumed by transportation and housing by 10%; Increase the share of affordable housing in PDAs, TPAs, or high-opportunity areas by 15%; Do not increase the share of low- and moderate-income renter households in PDAs, TPAs, or high-opportunity areas that are at risk of displacement.
 
-The accessibility-based objective is not only to improve social inclusion and reduce social inequities, but also to support and foster economic development through improved employment accessibility for deprived areas. accessibility indicators should be used as general performance indicators.
+# Definition
 
-the concept of accessibility has been a common element in the goals and objectives of transport plans @hansen1959accessibility. 
+Accessibility, defined as the ease of reaching destinations, services, or activities; the distribution, character, or amount of activity around a given place; the choices that the built environment offers to travelers*(Preston and Rajé, 2007; Litman, 2013; @handy2018enough)*. It is largely contingent on the spatial distribution of destinations, influenced by the distribution of residential, economic, cultural and social activities. 
 
-However, the federal guidelines and prior plan doesn't define access explicitly. The terms accessibility and mobility are used as a vague term that does not reflect the ease of reaching various destinations and often are conflated, “misused”, and “abused” in practice (Halden, 2011). Access to destinations does not translate into indicators that reflect accessibility in previous plans.
-
-Explicitly defining accessibility as the end goal of the transportation network would encourage the establishment of accessibility-based performance indicators and help policy-making for MTC, ABAG, and local governments.
-
-
-# Definition: why it should be used in transportation decision making
-
-Accessibility, defined as the ease of reaching destinations,services, and activities; the distribution, character, and amount of activity around a given place; the choices that the built environment offers to travelers*(Preston and Rajé, 2007; Litman, 2013; @handy2018enough)*, 
-
-for individual, living in an area with relatively high accessibility to jobs is associated with shorter trips, as is working in an area of relatively high housing accessibility.9
-
-for firms: e.g. access to suppliers, workforce, customers, desirable environment (aesthetically pleasing surroundings, clean air and water),amenities (access to recreational and other non-work destinations), friendly government, etc. [@levinson2018metropolitan, p. 111]
+For individual, living in an area with high accessibility to jobs is associated with shorter trips, as is working in an area of high housing accessibility.9 For firms, high accessibility means that easy access to suppliers, workforce, customers, desirable environment, amenities, friendly government, etc. [@levinson2018metropolitan, p. 111]
 
 Accessibility is instrumental in explaining the spatial form and function of metropolitan areas. 
-It is the "fundamental force for the relationship between transport and land use in a city and their impacts on city organization, development, and planning to achieve more sustainable outcomes."[@levinson2018metropolitan, p. 22] It is one of the most comprehensive measures to assess the complex performance of land use and transportation systems in a region.[@boisjoly2017get], to assess current conditions and proposed policies
+It is the "fundamental force for the relationship between transport and land use in a city and their impacts on city organization, development, and planning to achieve more sustainable outcomes."[@levinson2018metropolitan, p. 22] Moreover, It’s a goal that almost everyone can agree on to assess current conditions and proposed policies [@handy2018enough]. 
 
-Moreover, It’s a goal that almost everyone can agree on, and it opens doors to a host of strategies that could reduce auto dependence and improve quality of life. [@handy2018enough]
+# The accessibility measures
 
-# Evaluates the accessibility measures
-
-use accessibility measures to define regional transportation priorities
-
-
-
- is largely contingent on the spatial distribution of destinations, influenced by the distribution of residential, economic, cultural and social activities. 
-
-related to the spatial distribution of opportunities. such as households, jobs, retail stores, health and other services.
-
+The accessibility measures related to the spatial distribution of opportunities. such as households, jobs, retail stores, health and other services.This metrics help policymakers to define regional transportation priorities.
 
  - cumulative-opportunity measures: the availability of opportunities close by
- 
-(counting exchange opportunities within a defined geographic parameter)
 
-cumulative-opportunity measures typically accounts for the number of opportunities that can be reached from a specific location using a specific mode within a travel costs threshold  (Handy and Niemeier, 1997). For example, the number of jobs that are within 45 min of travel times by transit from a specific place is used to assess the access to jobs by public transit.
+cumulative-opportunity measures typically accounts for the number of opportunities that can be reached from a specific location using a specific mode within a travel costs threshold  (Handy and Niemeier, 1997). For example, the number of jobs that are within 45 min of travel times by transit from a specific place (counting exchange opportunities within a defined geographic parameter).
 
-cumulative-opportunity measures are easy to generate, interpret, and to communicate. they are most commonly used by policy-makers as they provide a comprehensive measure of the land use and transport system at the regional level (Dodson et al., 2007). and thus better suited for planning documents
+cumulative-opportunity measures are easy to generate, interpret, and to communicate. they are most commonly used by policy-makers as they provide a comprehensive measure of the land use and transport system at the regional level (Dodson et al., 2007). and thus better suited for planning documents.
 
  - gravity-based measure: the ease and worth of travel to destinations far away
 
-(pitting the importance of given exchange opportunities against travel time impedances), 
+The gravity-based measure discounts opportunities with a distance-decay function based on their travel costs (pitting the importance of given exchange opportunities against travel time impedances). The farther opportunities receive less weight than closer. This measure better reflects travel behavior as it accounts for the travelers’ perceptions of time (Ben-Akiva and Lerman, 1979). 
 
-the gravity-based measure discounts opportunities based on a distance-decay function.based on their travel costs. Accordingly, opportunities that are located farther (by distance or time) receive less weight than closer opportunities. 
-
-this measure better reflect travel behavior as it accounts for the travelers’ perceptions of time (Ben-Akiva and Lerman, 1979). 
-
-This measure is not directly expressed in terms of the number of opportunities. is more complex to generate, and more difficult to interpret and communicate (Geurs and van Wee, 2004; A. Owen and Levinson, 2014).
+This measure is not directly expressed in terms of the number of opportunities, is more complex to generate, and more difficult to interpret and communicate (Geurs and van Wee, 2004; A. Owen and Levinson, 2014).
 
 Integrating both cumulative-opportunity and gravity-based measure, including access to transport and to destinations, would provide a good indication of transport coverage, captures the performance of the land use and transportation systems, which better reflect the social and economic benefits (Banister, 2008, Koenig, 1980, Wachs and Kumagai, 1973).
 
+ - The evaluation of local/neighborhood accessibility.
 
-|   |cumulative-opportunity measures|gravity-based measure
-|---|---|---
-access to destinations|   |
-Access to public transport   |
- 
+Local accessibility is primarily determined by nearby activity (approximately one-half to one mile in residential areas). The destinations include to grocery stores, schools, hospitals, parks or public transport station. It is a reflection of the available oppotunities of jobs and services at the neighborhood levels. 
 
- - the evaluation of Local accessibility.
+Local accessibility is often associated with cycling and walking. distance thresholds are used instead of travel time thresholds (0.5 miles for walking). These appear to be appropriate measures of accessibility, as time is generally proportional to the distance travelled by bicycle or foot. 
 
-A new transport infrastructure improvement increases the relative accessibility of some places that can directly use the facility
-
-Local accessibility is primarily determined by nearby activity (approximately one-half to one mile (800 to 1,600 m) in residential areas). include to grocery stores, schools, parks or public transport station for example libraries, schools, grocery stores, hospitals, public parks, educational services  Many of these destinations reflect local accessibility and are thus often associated with cycling and walking. 
-
- walking and cycling distance thresholds are used instead of travel time thresholds (0.5 miles for walking). These appear to be appropriate measures of accessibility, as time is generally proportional to the distance travelled by bicycle or foot. 
-
- Access to jobs can also be a reflection of the level of services available around a certain location, as the delivery of services often equates a certain number of employees. 
-
-Neighborhood accessibility policy initiatives speak more to issues of mixing uses on a parcel or neighborhood scale, site design, and more directly, facilitating circulation patterns that enhance walking, bicycling, and transit use.
+Local accessibility policy initiatives speak more to issues of mixing uses on a parcel or neighborhood scale, site design, and more directly, facilitating circulation patterns that enhance walking, bicycling, and transit use.
 
 Analysing future development scenarios in terms of their levels of accessibility could leverage MPOs’ influence on municipal-level land-use decisions. 
 
 Such comparisons could help MPOs provide better information about the performance and the costs of different transportation-infrastructure and land-use scenarios.
 
-Better information about the tradeoffs inherent in different development scnearios can help regions choose projects more objectively.
+Better information about the tradeoffs inherent in different development scnearios can help regions choose projects more objectively. How a new transport infrastructure improvement increases the accessibility, who and where can directly use the facility do matters. 
 
-# equity analysis
+# Equity analysis
 
-Discusses how equity could be incorporated in the accessibility measures. In doing so, how are you defining equity?
+Equity analysis based on accessibility is about the environmental justice assessment, which evaluate whether there are any disproportionately high and adverse impacts on low-income and minority populations or communities of concern [^3].  It assesses the distribution of benefits and burdens on communities of concern in comparison to the rest of the region. It promotes proximity to services, amenities, and opportunity areas for specific vulnerable groups relatively the general population. It helps Plan Bay Area’s objective to advance equity in the region. Equity analysis can include specific types of destinations, modes, jobs, social groups, or temporal fluctuations.
 
-Equity analysis based on accessibility indicators generally assess the level of accessibility of specific vulnerable groups relatively the general population, using detailed accessibility metrics. Proximity to Services, Amenities, and Opportunity Areas
-
-Promoting access to housing, jobs and transportation for these residents helps Plan Bay Area’s objective to advance equity in the region; 
-
-Equity analysis can include specific types of destinations, modes, jobs, social groups, or Temporal fluctuations.
-
-  Time restrictions also play an important role in determining accessibility. These include land use, transport and individual constraints such as (opening hours, schedule of services, job starting time)
-
-Increasing accessibility by transit, cycling and walking can contribute to achieving broader environmental, economic and social goals. Such as the percentage of people or jobs that are within 0.5 mile of a public transport station. 
+[^3] "Environmental justice is the fair treatment and meaningful involvement of all people regardless of race, color, national origin, or income with respect to the development, implementation, and enforcement of environmental laws, regulations, and policies." 
 
 the accessibility to all jobs may not represent the opportunities that are available to different groups of populations.
 segment the accessibility analysis by socio-economic groups. such as income, level of education, gender and vehicle ownership affect one's abilities and needs to access destinations. 
 
 Measures of generalized costs (including financial and time costs). These measures better reflect the total costs of travel as they include both financial and time burdens. is closer to reality and can also provide an insight on fare structures and trip affordability. address the financial constraints that vulnerable individuals may face.
 
+Increasing accessibility by transit, cycling and walking can contribute to achieving broader environmental, economic and social goals. Such as the percentage of people or jobs that are within 0.5 mile of a public transport station. 
 
-An equity analysis that assesses the distribution of benefits and burdens on communities of concern in comparison to the rest of the region.
- 
-accessibility metrics is about the environmental justice assessment
+Time restrictions also play an important role in determining accessibility. These include land use, transport and individual constraints such as (opening hours, schedule of services, job starting time)
 
-"Environmental justice is the fair treatment and meaningful involvement of all people regardless of race, color, national origin, or income with respect to the development, implementation, and enforcement of environmental laws, regulations, and policies." 
-
-An environmental justice analysis of investments to determine whether there are any disproportionately high and adverse impacts on low-income and minority populations or communities of concern;
 
 # More options 
 
-Accessibility maps and metrics provide an overview of the land use and transportation network. are useful tools to communicate gaps and thus helps decision-makers, planners and the general population to better grasp the impacts of transportation investments. 
-
-the utility-based measures capture the economic benefits provided by changes in the network. Utility-based measures account for most components of accessibility and can be included in traditional cost-benefit analysis (van Wee, 2016). 
-
-other dimensions of accessibility might currently be neglected in metropolitan transportation plans. For example, affordability, transfer and digital connectivity @lyons2016guidance should come up as the aspects of accessibility objectives.
-
-More efforts are needed to effectively implement accessibility-based approaches.
+More efforts are needed to effectively implement accessibility-based approaches. The utility-based measures capture the economic benefits provided by changes in the network. Utility-based measures account for most components of accessibility and can be included in traditional cost-benefit analysis (van Wee, 2016). 
+Other dimensions of accessibility such as affordability, transfer and digital connectivity @lyons2016guidance should not be neglected in metropolitan transportation plans and should come up as the aspects of accessibility objectives.
+Accessibility maps and metrics provide an overview of the land use and transportation network, are useful tools to communicate gaps and thus helps decision-makers, planners and the general population to better grasp the impacts of transportation investments. 
 
 # Conclusion
 
 Plan Bay Area 2050 sets a roadmap for future transportation investments and will identify what it would take to accommodate expected growth.
-It is neccessary to define and measure accessibility in updating Plan Bay area 2050.
-
 Accessibility, the ease of reaching destinations, allows capturing the complex interactions between land use and transportation systems while providing a social perspective on transportation planning. 
 
-Integrating RTP goals with accessibility-focused performance measures could help MPOs make better decisions about the selection and prioritisation of transportation infrastructure. For instance, prioritising transit improvements to connect key origins and destinations can increase ridership *(Badoe and Miller, 2000; Chakraborty and Mishra, 2013)* 
+Setting clear accessibility requirements for transportation planning processes and planning documents could provide greater transparency and foster the inclusion of accessibility aspect in the decision-making process. Integrating Plan Bay area 2050 goals with accessibility-focused performance measures could help MTC make better decisions about the selection and prioritisation of transportation infrastructure.  [@boisjoly2017insider]
 
-Regional and local governments can play a key role in setting clear accessibility requirements for transportation planning processes and planning documents. [@boisjoly2017insider]
 
-Clearly defined accessibility goals and objectives are included in the plan. and translated into performance indicators,Accessibility indicators are systematically included in the performance analyses, to ultimately derive policy recommendations. 
 
-metrics are used to assess the general performance of the land use and transportation system, in addition to social equity.for various modes of transport
 
-Overall, using clearly defined indicators, provide greater transparency and typically foster the inclusion of accessibility aspect in the decision-making process.
+Notes {#notes}
+==========
+
+
+
+---
+nocite: | 
+  @litman2017evaluating
+...
+
+
+References {#references .unnumbered}
+==========
 
 
 
@@ -259,22 +195,3 @@ Accordingly, they foster the inclusion of accessibility indicators that adequate
 An intermediate way of defining accessibility indicators is by attributing scores (from 1 to 3 for example) based on specific guidelines. This approach has the advantage of defining clear weights associated with accessibility criteria, thus providing greater transparency. 
 
 quantified metrics provide more specific guidelines that directly reflect the ease of reaching destinations. However, they provide lower flexibility and might not adequately reflect the outcomes of the different investments. 
-
-
-Notes {#notes}
-==========
-
-Decrease the share of lower-income residents’ household income consumed by transportation and housing by 10%.
- 
-Increase the share of affordable housing in PDAs, TPAs, or high-opportunity areas by 15%.
- 
-Do not increase the share of low- and moderate-income renter households in PDAs, TPAs, or high-opportunity areas that are at risk of displacement.
-
----
-nocite: | 
-  @litman2017evaluating
-...
-
-
-References {#references .unnumbered}
-==========
