--- a/static/usp570/pm_usp570.tex
+++ b/static/usp570/pm_usp570.tex
@@ -29,7 +29,6 @@
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
-\usepackage{longtable,booktabs}
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -96,50 +95,25 @@ From: Shen Qu, Policy Advisor
 
 Date: 5/2/2019
 
-RE: Define and measure accessibility in Plan Bay are 2050
+RE: Define and measure accessibility in Plan Bay Area 2050
 
 \hypertarget{summary}{%
 \section{Summary}\label{summary}}
 
 Accessibility, the ease of reaching destinations, is a key land use and
-transportation performance measure(Boisjoly and El-Geneidy 2017b).
-Including clear accessibility objectives, definitions, and indicators in
-Plan Bay Area 2050 is key to promoting the use of metrics in policy and
-practice.
-
-multi-criteria analysis approaches including accessibility indicators
-need to guide the decision-making process and ultimately. To meet The
-Bay Area's transportation needs through 2050 while preserving the
-character of its diverse communities and adapting to future population
-growth. To make progress toward the Bay Area long-range transportation
-and land use goals.
-
-(Boisjoly and El-Geneidy 2017a)
-
-equity analysis greater accessibility reducing the risks of social
-exclusion for vulnerable individuals \emph{(Preston and Rajé, 2007,
-Lucas, 2012)}
-
-Accessibility goals and objectives
-
-accessibility indicators
-
-Access to destinations metrics
-
-Multiple modes
-
-Visualization tools
+transportation performance measure(Boisjoly and El-Geneidy 2017b). The
+decision-making process should include clear accessibility objectives,
+definitions, and indicators in Plan Bay Area 2050. Some approaches and
+tools can promote achiving greater accessibility. The equity analysis of
+accessibility can help reducing the risks of social exclusion for
+vulnerable individuals \emph{(Preston and Rajé, 2007, Lucas, 2012)}.
+Ultimately, the use of metrics in policy and practice is key to make
+progress toward the Bay Area long-range transportation and land use
+goals while preserving the character of its diverse communities and
+adapting to future population growth.
 
 \hypertarget{background}{%
 \section{Background}\label{background}}
-
-\begin{itemize}
-\tightlist
-\item
-  Plan Bay Area 2050: they are going to update their regional
-  transportation plan, along with their processes for selecting projects
-  for funding, at all scales.
-\end{itemize}
 
 Plan Bay Area 2050 is an integrated long-range transportation and land
 use plan developed and adopt by MTC and ABAG. Work on Plan Bay Area 2050
@@ -152,97 +126,81 @@ last four years.
 Re-examining the prior Plan's goals and targets is one of the first
 steps in updating Plan Bay Area in order to make them as meaningful as
 possible in measuring the Plan's performance. In the current 13
-performance targets, three goals are about `Equitable Access'. It is
-also a response to the most recent federal transportation bills -- the
-Fixing America's Surface Transportation Act (FAST Act) that require Plan
-Bay Area to address `accessibility and mobility of people and freight'
-(U.S. Department of Transportation, 2014).
-
-Although the three targets are components of accessibility, it does not
-fully reflect access to destinations. In spite of access afordable
-housing, a broader range of destinations is generally included
-
-accessibility is one of the most comprehensive performance measures of
-land use and transportation systems \emph{(El-Geneidy and Levinson,
-2006)}.
-
-is associated with higher employment rates, provides residents with
-greater access to a variety of opportunities\emph{(Ornati et al., 1969,
-Pignatar and Falcocch, 1969, Sanchez, 1999, Blumenberg and Ong, 2001,
-Sari, 2015, Tyndall, 2015)}, reducing car use greater transit use
-\emph{(Chen et al., 2008, Owen and Levinson, 2015b)},and the resulting
-greenhouse gas emissions \emph{(Levinson, 1998, Handy, 2002)}.
-
-accessibility allows increaseing the chances of meeting the other
-performance targets in Plan Bay Area, including Climate Protection,
-Healthy and Safe Communities, Open Space and Agricultural Preservation,
-Economic Vitality, Transportation System Effectiveness, and should hence
-also be used to assess the overall benefits of potential investments.
-
-The accessibility-based objective is not only to improve social
-inclusion and reduce social inequities, but also to support and foster
-economic development through improved employment accessibility for
-deprived areas. accessibility indicators should be used as general
-performance indicators.
-
-the concept of accessibility has been a common element in the goals and
-objectives of transport plans Hansen (1959).
+performance targets,\footnote{The 13 performance targets are included in
+  six categories: Climate Protection, Healthy and Safe Communities, Open
+  Space and Agricultural Preservation, Equitable Access, Economic
+  Vitality, and Transportation System Effectiveness.} three goals are
+about `Equitable Access'\footnote{The three goals include: Decrease the
+  share of lower-income residents' household income consumed by
+  transportation and housing by 10\%; Increase the share of affordable
+  housing in PDAs, TPAs, or high-opportunity areas by 15\%; Do not
+  increase the share of low- and moderate-income renter households in
+  PDAs, TPAs, or high-opportunity areas that are at risk of
+  displacement.}. It is also a response to the most recent federal
+transportation bills -- the Fixing America's Surface Transportation Act
+(FAST Act) that require Plan Bay Area to address `accessibility and
+mobility of people and freight' (U.S. Department of Transportation,
+2014).
 
 However, the federal guidelines and prior plan doesn't define access
 explicitly. The terms accessibility and mobility are used as a vague
 term that does not reflect the ease of reaching various destinations and
 often are conflated, ``misused'', and ``abused'' in practice (Halden,
 2011). Access to destinations does not translate into indicators that
-reflect accessibility in previous plans.
+reflect accessibility in previous plans. Although the three targets are
+components of accessibility, they do not fully reflect access to
+destinations. In spite of access afordable housing, a broader range of
+destinations should be included.
 
-Explicitly defining accessibility as the end goal of the transportation
-network would encourage the establishment of accessibility-based
-performance indicators and help policy-making for MTC, ABAG, and local
-governments.
+The concept of accessibility has been a common element in the goals and
+objectives of transport plans Hansen (1959). It is one of the most
+comprehensive performance measures of land use and transportation
+systems (Boisjoly and El-Geneidy 2017a), which provides residents with
+greater access to a variety of opportunities, is associated with higher
+employment rates, greater transit use, and less greenhouse gas emissions
+\emph{(Chen et al., 2008, Owen and Levinson, 2015b)}. It is not only to
+support and foster economic development through improved employment
+accessibility for deprived areas, but also to improve social inclusion
+and reduce social inequities.
 
-\hypertarget{definition-why-it-should-be-used-in-transportation-decision-making}{%
-\section{Definition: why it should be used in transportation decision
-making}\label{definition-why-it-should-be-used-in-transportation-decision-making}}
+Explicitly defining and measuring accessibility as the end goal of the
+transportation network would encourage the establishment of
+accessibility-based performance indicators to assess the overall
+benefits of potential investments, and help decision-making for MTC,
+ABAG, and local governments.
 
-Accessibility, defined as the ease of reaching destinations,services,
-and activities; the distribution, character, and amount of activity
-around a given place; the choices that the built environment offers to
-travelers\emph{(Preston and Rajé, 2007; Litman, 2013; Handy (2018))},
+\hypertarget{definition}{%
+\section{Definition}\label{definition}}
 
-for individual, living in an area with relatively high accessibility to
-jobs is associated with shorter trips, as is working in an area of
-relatively high housing accessibility.9
+Accessibility, defined as the ease of reaching destinations, services,
+or activities; the distribution, character, or amount of activity around
+a given place; the choices that the built environment offers to
+travelers\emph{(Preston and Rajé, 2007; Litman, 2013; Handy (2018))}. It
+is largely contingent on the spatial distribution of destinations,
+influenced by the distribution of residential, economic, cultural and
+social activities.
 
-for firms: e.g.~access to suppliers, workforce, customers, desirable
-environment (aesthetically pleasing surroundings, clean air and
-water),amenities (access to recreational and other non-work
-destinations), friendly government, etc. (Levinson and Krizek 2018, 111)
+For individual, living in an area with high accessibility to jobs is
+associated with shorter trips, as is working in an area of high housing
+accessibility.9 For firms, high accessibility means that easy access to
+suppliers, workforce, customers, desirable environment, amenities,
+friendly government, etc. (Levinson and Krizek 2018, 111)
 
 Accessibility is instrumental in explaining the spatial form and
 function of metropolitan areas. It is the ``fundamental force for the
 relationship between transport and land use in a city and their impacts
 on city organization, development, and planning to achieve more
-sustainable outcomes.''(Levinson and Krizek 2018, 22) It is one of the
-most comprehensive measures to assess the complex performance of land
-use and transportation systems in a region.(Boisjoly and El-Geneidy
-2017a), to assess current conditions and proposed policies
+sustainable outcomes.''(Levinson and Krizek 2018, 22) Moreover, It's a
+goal that almost everyone can agree on to assess current conditions and
+proposed policies (Handy 2018).
 
-Moreover, It's a goal that almost everyone can agree on, and it opens
-doors to a host of strategies that could reduce auto dependence and
-improve quality of life. (Handy 2018)
+\hypertarget{the-accessibility-measures}{%
+\section{The accessibility measures}\label{the-accessibility-measures}}
 
-\hypertarget{evaluates-the-accessibility-measures}{%
-\section{Evaluates the accessibility
-measures}\label{evaluates-the-accessibility-measures}}
-
-use accessibility measures to define regional transportation priorities
-
-is largely contingent on the spatial distribution of destinations,
-influenced by the distribution of residential, economic, cultural and
-social activities.
-
-related to the spatial distribution of opportunities. such as
-households, jobs, retail stores, health and other services.
+The accessibility measures related to the spatial distribution of
+opportunities. such as households, jobs, retail stores, health and other
+services.This metrics help policymakers to define regional
+transportation priorities.
 
 \begin{itemize}
 \tightlist
@@ -251,20 +209,18 @@ households, jobs, retail stores, health and other services.
   close by
 \end{itemize}
 
-(counting exchange opportunities within a defined geographic parameter)
-
 cumulative-opportunity measures typically accounts for the number of
 opportunities that can be reached from a specific location using a
 specific mode within a travel costs threshold (Handy and Niemeier,
 1997). For example, the number of jobs that are within 45 min of travel
-times by transit from a specific place is used to assess the access to
-jobs by public transit.
+times by transit from a specific place (counting exchange opportunities
+within a defined geographic parameter).
 
 cumulative-opportunity measures are easy to generate, interpret, and to
 communicate. they are most commonly used by policy-makers as they
 provide a comprehensive measure of the land use and transport system at
 the regional level (Dodson et al., 2007). and thus better suited for
-planning documents
+planning documents.
 
 \begin{itemize}
 \tightlist
@@ -273,19 +229,15 @@ planning documents
   far away
 \end{itemize}
 
-(pitting the importance of given exchange opportunities against travel
-time impedances),
-
-the gravity-based measure discounts opportunities based on a
-distance-decay function.based on their travel costs. Accordingly,
-opportunities that are located farther (by distance or time) receive
-less weight than closer opportunities.
-
-this measure better reflect travel behavior as it accounts for the
-travelers' perceptions of time (Ben-Akiva and Lerman, 1979).
+The gravity-based measure discounts opportunities with a distance-decay
+function based on their travel costs (pitting the importance of given
+exchange opportunities against travel time impedances). The farther
+opportunities receive less weight than closer. This measure better
+reflects travel behavior as it accounts for the travelers' perceptions
+of time (Ben-Akiva and Lerman, 1979).
 
 This measure is not directly expressed in terms of the number of
-opportunities. is more complex to generate, and more difficult to
+opportunities, is more complex to generate, and more difficult to
 interpret and communicate (Geurs and van Wee, 2004; A. Owen and
 Levinson, 2014).
 
@@ -296,46 +248,28 @@ use and transportation systems, which better reflect the social and
 economic benefits (Banister, 2008, Koenig, 1980, Wachs and Kumagai,
 1973).
 
-\begin{longtable}[]{@{}lll@{}}
-\toprule
-& cumulative-opportunity measures & gravity-based measure\tabularnewline
-\midrule
-\endhead
-access to destinations & &\tabularnewline
-Access to public transport & &\tabularnewline
-\bottomrule
-\end{longtable}
-
 \begin{itemize}
 \tightlist
 \item
-  the evaluation of Local accessibility.
+  The evaluation of local/neighborhood accessibility.
 \end{itemize}
 
-A new transport infrastructure improvement increases the relative
-accessibility of some places that can directly use the facility
-
 Local accessibility is primarily determined by nearby activity
-(approximately one-half to one mile (800 to 1,600 m) in residential
-areas). include to grocery stores, schools, parks or public transport
-station for example libraries, schools, grocery stores, hospitals,
-public parks, educational services Many of these destinations reflect
-local accessibility and are thus often associated with cycling and
-walking.
+(approximately one-half to one mile in residential areas). The
+destinations include to grocery stores, schools, hospitals, parks or
+public transport station. It is a reflection of the available
+oppotunities of jobs and services at the neighborhood levels.
 
-walking and cycling distance thresholds are used instead of travel time
-thresholds (0.5 miles for walking). These appear to be appropriate
-measures of accessibility, as time is generally proportional to the
-distance travelled by bicycle or foot.
+Local accessibility is often associated with cycling and walking.
+distance thresholds are used instead of travel time thresholds (0.5
+miles for walking). These appear to be appropriate measures of
+accessibility, as time is generally proportional to the distance
+travelled by bicycle or foot.
 
-Access to jobs can also be a reflection of the level of services
-available around a certain location, as the delivery of services often
-equates a certain number of employees.
-
-Neighborhood accessibility policy initiatives speak more to issues of
-mixing uses on a parcel or neighborhood scale, site design, and more
-directly, facilitating circulation patterns that enhance walking,
-bicycling, and transit use.
+Local accessibility policy initiatives speak more to issues of mixing
+uses on a parcel or neighborhood scale, site design, and more directly,
+facilitating circulation patterns that enhance walking, bicycling, and
+transit use.
 
 Analysing future development scenarios in terms of their levels of
 accessibility could leverage MPOs' influence on municipal-level land-use
@@ -346,34 +280,28 @@ performance and the costs of different transportation-infrastructure and
 land-use scenarios.
 
 Better information about the tradeoffs inherent in different development
-scnearios can help regions choose projects more objectively.
+scnearios can help regions choose projects more objectively. How a new
+transport infrastructure improvement increases the accessibility, who
+and where can directly use the facility do matters.
 
 \hypertarget{equity-analysis}{%
-\section{equity analysis}\label{equity-analysis}}
+\section{Equity analysis}\label{equity-analysis}}
 
-Discusses how equity could be incorporated in the accessibility
-measures. In doing so, how are you defining equity?
+Equity analysis based on accessibility is about the environmental
+justice assessment, which evaluate whether there are any
+disproportionately high and adverse impacts on low-income and minority
+populations or communities of concern {[}\^{}3{]}. It assesses the
+distribution of benefits and burdens on communities of concern in
+comparison to the rest of the region. It promotes proximity to services,
+amenities, and opportunity areas for specific vulnerable groups
+relatively the general population. It helps Plan Bay Area's objective to
+advance equity in the region. Equity analysis can include specific types
+of destinations, modes, jobs, social groups, or temporal fluctuations.
 
-Equity analysis based on accessibility indicators generally assess the
-level of accessibility of specific vulnerable groups relatively the
-general population, using detailed accessibility metrics. Proximity to
-Services, Amenities, and Opportunity Areas
-
-Promoting access to housing, jobs and transportation for these residents
-helps Plan Bay Area's objective to advance equity in the region;
-
-Equity analysis can include specific types of destinations, modes, jobs,
-social groups, or Temporal fluctuations.
-
-Time restrictions also play an important role in determining
-accessibility. These include land use, transport and individual
-constraints such as (opening hours, schedule of services, job starting
-time)
-
-Increasing accessibility by transit, cycling and walking can contribute
-to achieving broader environmental, economic and social goals. Such as
-the percentage of people or jobs that are within 0.5 mile of a public
-transport station.
+{[}\^{}3{]} ``Environmental justice is the fair treatment and meaningful
+involvement of all people regardless of race, color, national origin, or
+income with respect to the development, implementation, and enforcement
+of environmental laws, regulations, and policies.''
 
 the accessibility to all jobs may not represent the opportunities that
 are available to different groups of populations. segment the
@@ -387,77 +315,55 @@ both financial and time burdens. is closer to reality and can also
 provide an insight on fare structures and trip affordability. address
 the financial constraints that vulnerable individuals may face.
 
-An equity analysis that assesses the distribution of benefits and
-burdens on communities of concern in comparison to the rest of the
-region.
+Increasing accessibility by transit, cycling and walking can contribute
+to achieving broader environmental, economic and social goals. Such as
+the percentage of people or jobs that are within 0.5 mile of a public
+transport station.
 
-accessibility metrics is about the environmental justice assessment
-
-``Environmental justice is the fair treatment and meaningful involvement
-of all people regardless of race, color, national origin, or income with
-respect to the development, implementation, and enforcement of
-environmental laws, regulations, and policies.''
-
-An environmental justice analysis of investments to determine whether
-there are any disproportionately high and adverse impacts on low-income
-and minority populations or communities of concern;
+Time restrictions also play an important role in determining
+accessibility. These include land use, transport and individual
+constraints such as (opening hours, schedule of services, job starting
+time)
 
 \hypertarget{more-options}{%
 \section{More options}\label{more-options}}
 
+More efforts are needed to effectively implement accessibility-based
+approaches. The utility-based measures capture the economic benefits
+provided by changes in the network. Utility-based measures account for
+most components of accessibility and can be included in traditional
+cost-benefit analysis (van Wee, 2016). Other dimensions of accessibility
+such as affordability, transfer and digital connectivity Lyons and
+Davidson (2016) should not be neglected in metropolitan transportation
+plans and should come up as the aspects of accessibility objectives.
 Accessibility maps and metrics provide an overview of the land use and
-transportation network. are useful tools to communicate gaps and thus
+transportation network, are useful tools to communicate gaps and thus
 helps decision-makers, planners and the general population to better
 grasp the impacts of transportation investments.
-
-the utility-based measures capture the economic benefits provided by
-changes in the network. Utility-based measures account for most
-components of accessibility and can be included in traditional
-cost-benefit analysis (van Wee, 2016).
-
-other dimensions of accessibility might currently be neglected in
-metropolitan transportation plans. For example, affordability, transfer
-and digital connectivity Lyons and Davidson (2016) should come up as the
-aspects of accessibility objectives.
-
-More efforts are needed to effectively implement accessibility-based
-approaches.
 
 \hypertarget{conclusion}{%
 \section{Conclusion}\label{conclusion}}
 
 Plan Bay Area 2050 sets a roadmap for future transportation investments
-and will identify what it would take to accommodate expected growth. It
-is neccessary to define and measure accessibility in updating Plan Bay
-area 2050.
-
+and will identify what it would take to accommodate expected growth.
 Accessibility, the ease of reaching destinations, allows capturing the
 complex interactions between land use and transportation systems while
 providing a social perspective on transportation planning.
 
-Integrating RTP goals with accessibility-focused performance measures
-could help MPOs make better decisions about the selection and
-prioritisation of transportation infrastructure. For instance,
-prioritising transit improvements to connect key origins and
-destinations can increase ridership \emph{(Badoe and Miller, 2000;
-Chakraborty and Mishra, 2013)}
+Setting clear accessibility requirements for transportation planning
+processes and planning documents could provide greater transparency and
+foster the inclusion of accessibility aspect in the decision-making
+process. Integrating Plan Bay area 2050 goals with accessibility-focused
+performance measures could help MTC make better decisions about the
+selection and prioritisation of transportation infrastructure. (Boisjoly
+and El-Geneidy 2017b)
 
-Regional and local governments can play a key role in setting clear
-accessibility requirements for transportation planning processes and
-planning documents. (Boisjoly and El-Geneidy 2017b)
+\hypertarget{notes}{%
+\section{Notes}\label{notes}}
 
-Clearly defined accessibility goals and objectives are included in the
-plan. and translated into performance indicators,Accessibility
-indicators are systematically included in the performance analyses, to
-ultimately derive policy recommendations.
-
-metrics are used to assess the general performance of the land use and
-transportation system, in addition to social equity.for various modes of
-transport
-
-Overall, using clearly defined indicators, provide greater transparency
-and typically foster the inclusion of accessibility aspect in the
-decision-making process.
+\hypertarget{references}{%
+\section*{References}\label{references}}
+\addcontentsline{toc}{section}{References}
 
 \hypertarget{distinguishing-accessibility-and-mobility}{%
 \section{distinguishing Accessibility and
@@ -620,23 +526,6 @@ quantified metrics provide more specific guidelines that directly
 reflect the ease of reaching destinations. However, they provide lower
 flexibility and might not adequately reflect the outcomes of the
 different investments.
-
-\hypertarget{notes}{%
-\section{Notes}\label{notes}}
-
-Decrease the share of lower-income residents' household income consumed
-by transportation and housing by 10\%.
-
-Increase the share of affordable housing in PDAs, TPAs, or
-high-opportunity areas by 15\%.
-
-Do not increase the share of low- and moderate-income renter households
-in PDAs, TPAs, or high-opportunity areas that are at risk of
-displacement.
-
-\hypertarget{references}{%
-\section*{References}\label{references}}
-\addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
 \leavevmode\hypertarget{ref-boisjoly2017get}{}%
